--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="inspiration.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_win()" href="inspiration.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Inspiration
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -103,7 +103,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="commercial.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_commercial()" href="commercial.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Commercial
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -114,7 +114,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_product()" href="product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Product
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -382,12 +382,12 @@
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <a href="granite.html">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 20px; margin-top: 10px;" src="images/granite.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/granite.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="granite.html">
-                  <h4 class="card-title">Granite</h4>
+                  <h4 class="card-title text-center">Granite</h4>
                 </a>
-                <p class="card-text mb-4"> Granite has been in use for thousands of years as dimension stone, construction material, decorative, and architectural stone.</p>
+                <p class="card-text mb-4 text-center"> Granite has been in use for thousands of years as dimension stone, construction material, decorative, and architectural stone.</p>
               </div>
             </div>
           </div>
@@ -395,12 +395,12 @@
           <a href="quartzite.html">
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 20px; margin-top: 10px;" src="images/quartzite.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/quartzite.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="quartzite.html">
-                  <h4 class="card-title">Quartzite</h4>
+                  <h4 class="card-title text-center">Quartzite</h4>
                 </a>
-                <p class="card-text mb-4"> Quartzite is a hard, non-foliated metamorphic rock which was originally <br> pure quartz sandstone.</p>
+                <p class="card-text mb-4 text-center"> Quartzite is a hard, non-foliated metamorphic rock which was originally <br> pure quartz sandstone.</p>
               </div>
             </div>
           </div>
@@ -411,12 +411,12 @@
           <a href="marble.html">
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 20px; margin-top: 10px;" src="images/marble.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/marble.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="marble.html">
-                  <h4 class="card-title">Marbles</h4>
+                  <h4 class="card-title text-center">Marbles</h4>
                 </a>
-                <p class="card-text mb-4"> Marble is a metamorphic rock composed of recrystallized carbonate minerals, most commonly calcite or dolomite</p>
+                <p class="card-text mb-4 text-center"> Marble is a metamorphic rock composed of recrystallized carbonate minerals, most commonly calcite or dolomite</p>
               </div>
             </div>
           </div>
@@ -424,12 +424,12 @@
           <a href="quartz.html">
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 20px; margin-top: 10px;" src="images/quartz.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/quartz.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="quartz.html">
-                  <h4 class="card-title">Quartz</h4>
+                  <h4 class="card-title text-center">Quartz</h4>
                 </a>
-                <p class="card-text mb-4"> Quartz minerals are mixed with resin and laid out to form slabs.</p>
+                <p class="card-text mb-4 text-center"> Quartz minerals are mixed with resin and laid out to form slabs.</p>
               </div>
             </div>
           </div>
@@ -446,7 +446,7 @@
     <div class="row">
       <div class="col-12">
         <div class="d-flex align-items-center section-title justify-content-between">
-          <h2 class="mb-0  mr-3" style="text-align: center;">Inspirations</h2>
+          <h2 style="margin-left: 480px;">Inspirations</h2>
           <div class="border-top w-100 border-primary d-none d-sm-block"></div>
         </div>
       </div>
@@ -619,7 +619,26 @@
 /* .active{
   color: #ffbc3b !important;
 } */
+
 </style>
+
+<script>
+  function open_win()
+{
+  // window.open("http://localhost/granite1/inspiration.html");
+  window.location.href = 'http://localhost/granite1/inspiration.html';
+}
+
+function open_commercial()
+{
+  window.location.href = 'http://localhost/granite1/commercial.html';
+}
+
+function open_product()
+{
+  window.location.href = 'http://localhost/granite1/product.html';
+}
+</script>
 
 
 
