--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="inspiration.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_win()" href="inspiration.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Inspiration
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -103,7 +103,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="commercial.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_commercial()" href="commercial.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Commercial
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -115,7 +115,7 @@
             </li>
             
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_product()" href="product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Product
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -292,7 +292,7 @@
 
     <div class="section-title">
       <!-- <span>Team</span> -->
-      <h2>Testimonials</h2>
+      <h2 class="text-center">Testimonials</h2>
     </div>
 
     <div class="row">
@@ -405,7 +405,7 @@
     <div class="row">
       <div class="col-12">
         <div class="d-flex align-items-center section-title justify-content-between">
-          <h2 class="mb-0  mr-3" style="text-align: center;">Inspirations</h2>
+          <h2 style="margin-left: 480px;">Inspirations</h2>
           <div class="border-top w-100 border-primary d-none d-sm-block"></div>
         </div>
       </div>
@@ -587,6 +587,24 @@
     color: inherit;
 }
 </style>
+
+<script>
+  function open_win()
+{
+  // window.open("http://localhost/granite1/inspiration.html");
+  window.location.href = 'http://localhost/granite1/inspiration.html';
+}
+
+function open_commercial()
+{
+  window.location.href = 'http://localhost/granite1/commercial.html';
+}
+
+function open_product()
+{
+  window.location.href = 'http://localhost/granite1/product.html';
+}
+</script>
 
 </body>
 </html>
