--- a/commercial.html
+++ b/commercial.html
@@ -83,7 +83,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="inspiration.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_win()" href="inspiration.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Inspiration
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -95,7 +95,7 @@
               </ul>
             </li>
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="commercial.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_commercial()" href="commercial.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Commercial
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -107,7 +107,7 @@
             </li>
             
             <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" onclick="open_product()" href="product.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Product
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -226,8 +226,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted">Commercial</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Commercial</li>
         </ul>
       </div>
     </div>
@@ -530,6 +530,24 @@
     color: inherit;
 }
 </style>
+
+<script>
+  function open_win()
+{
+  // window.open("http://localhost/granite1/inspiration.html");
+  window.location.href = 'http://localhost/granite1/inspiration.html';
+}
+
+function open_commercial()
+{
+  window.location.href = 'http://localhost/granite1/commercial.html';
+}
+
+function open_product()
+{
+  window.location.href = 'http://localhost/granite1/product.html';
+}
+</script>
 
 </body>
 </html>
