--- a/select_quote.html
+++ b/select_quote.html
@@ -135,6 +135,7 @@
                     href="inspiration.html"
                     id="navbarDropdown"
                     role="button"
+                    onclick="open_win()"
                     data-toggle="dropdown"
                     aria-haspopup="true"
                     aria-expanded="false"
@@ -169,6 +170,7 @@
                   <a
                     class="nav-link dropdown-toggle"
                     href="commercial.html"
+                    onclick="open_commercial()"
                     id="navbarDropdown"
                     role="button"
                     data-toggle="dropdown"
@@ -203,6 +205,7 @@
                   <a
                     class="nav-link dropdown-toggle"
                     href="product.html"
+                    onclick="open_product()"
                     id="navbarDropdown"
                     role="button"
                     data-toggle="dropdown"
@@ -859,5 +862,24 @@
     color: inherit;
 }
     </style>
+
+<script>
+  function open_win()
+{
+  // window.open("http://localhost/granite1/inspiration.html");
+  window.location.href = 'http://localhost/granite1/inspiration.html';
+}
+
+function open_commercial()
+{
+  window.location.href = 'http://localhost/granite1/commercial.html';
+}
+
+function open_product()
+{
+  window.location.href = 'http://localhost/granite1/product.html';
+}
+</script>
+
   </body>
 </html>
