first commit 26 sep 22

--- a/granite.html
+++ b/granite.html
@@ -242,6 +242,7 @@
     <p style="text-align:center;">Natural stone is a unique and popular countertop material. No two stones are exactly alike. Granite blocks are cut out of quarries and sliced to create slabs; colors are limited to what is found in nature.</p>
     <!-- course list -->
     <br>
+    <!-- <div class="content_found text-center"><strong style="font-size: 18px;">No Results Found</strong></div> -->
 <div class="row justify-content-center">
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5 products">
@@ -428,17 +429,17 @@
   function open_win()
 {
   // window.open("http://localhost/granite1/inspiration.html");
-  window.location.href = 'http://localhost/granite1/inspiration.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/inspiration.html';
 }
 
 function open_commercial()
 {
-  window.location.href = 'http://localhost/granite1/commercial.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/commercial.html';
 }
 
 function open_product()
 {
-  window.location.href = 'http://localhost/granite1/product.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/product.html';
 }
 </script>
 
