--- a/product.html
+++ b/product.html
@@ -226,8 +226,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted">Product</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Product</li>
         </ul>
       </div>
     </div>
@@ -658,17 +658,17 @@
   function open_win()
 {
   // window.open("http://localhost/granite1/inspiration.html");
-  window.location.href = 'http://localhost/granite1/inspiration.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/inspiration.html';
 }
 
 function open_commercial()
 {
-  window.location.href = 'http://localhost/granite1/commercial.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/commercial.html';
 }
 
 function open_product()
 {
-  window.location.href = 'http://localhost/granite1/product.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/product.html';
 }
 </script>
 
