--- a/restaurant.html
+++ b/restaurant.html
@@ -415,18 +415,19 @@
   function open_win()
 {
   // window.open("http://localhost/granite1/inspiration.html");
-  window.location.href = 'http://localhost/granite1/inspiration.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/inspiration.html';
 }
 
 function open_commercial()
 {
-  window.location.href = 'http://localhost/granite1/commercial.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/commercial.html';
 }
 
 function open_product()
 {
-  window.location.href = 'http://localhost/granite1/product.html';
+  window.location.href = 'https://amoriotechnology.github.io/absolute/product.html';
 }
+</script>
 </script>
 
 </body>
