--- a/contact.html
+++ b/contact.html
@@ -264,7 +264,7 @@
                 (856) 786-4888</p>
               <p><strong>Fax:</strong> <br>
                 (888) 203-0999</p>
-            <a href="mailto:yourmail@email.com" class="mb-5 text-color h5 d-block">phan@absolutegranites.com</a>
+            <a href="mailto:yourmail@email.com" class="mb-5 text-color h5 d-block" style="color: #5c5c77;">phan@absolutegranites.com</a>
           </div>
         </div>
       </div>
