--- a/about.html
+++ b/about.html
@@ -144,11 +144,11 @@
             </li>
             <li class="nav-item dropdown view">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                SelectQuote
+                Select Quote
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="book_appointment.html">Book an appointment</a></li>
-                <li><a class="dropdown-item" href="select_quote.html">SelectQuote</a></li>
+                <li><a class="dropdown-item" href="select_quote.html">Select Quote</a></li>
               </ul>
             </li>
             <li class="nav-item active">
@@ -302,7 +302,7 @@
           <h4>Sarah</h4>
           <!-- <span>Chief Executive Officer</span> -->
           <p>
-            I absolutely love my granite! Everything about your process and service was fantastic! I would definitely recommend you to anyone looking for Granite, Marble or Tile.
+            <q>I absolutely love my granite! Everything about your process and service was fantastic! I would definitely recommend you to anyone looking for Granite, Marble or Tile.</q>
           </p>
           <!-- <div class="social">
             <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
@@ -319,7 +319,7 @@
           <h4>Barbara</h4>
           <!-- <span>Product Manager</span> -->
           <p>
-            I absolutely love my granite! Everything about your process and service was fantastic! I would definitely recommend you to anyone looking for Granite, Marble or Tile.
+            <q>I absolutely love my granite! Everything about your process and service was fantastic! I would definitely recommend you to anyone looking for Granite, Marble or Tile.</q>
           </p>
           <!-- <div class="social">
             <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
@@ -336,7 +336,7 @@
           <h4>Victoria</h4>
           <!-- <span>CTO</span> -->
           <p>
-            The granite was fabricated without a flaw. Workers were neat and productive in the installation. Everything is wonderful.
+            <q>The granite was fabricated without a flaw. Workers were neat and productive in the installation. Everything is wonderful.</q>
           </p>
           <!-- <div class="social">
             <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
@@ -353,7 +353,7 @@
           <h4>John</h4>
           <!-- <span>CTO</span> -->
           <p>
-            Very impressive. Great staff. Knowledgeable. Super selection. No need to go anyplace else!
+            <q>Very impressive. Great staff. Knowledgeable. Super selection. No need to go anyplace else!</q>
           </p>
           <!-- <div class="social">
             <a href="" style="margin: 0 3px;"><i class="ti-facebook text-primary"></i></a>
