--- a/granite.html
+++ b/granite.html
@@ -227,8 +227,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Granite</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #fff !important;">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #fff !important;">Granite</li>
         </ul>
       </div>
     </div>
@@ -239,6 +239,7 @@
 <!-- courses -->
 <section class="section">
   <div class="container">
+    <h2 style="color: #0B0B45 !important;" class="text-center">Granite</h2><br>
     <p style="text-align:center;">Natural stone is a unique and popular countertop material. No two stones are exactly alike. Granite blocks are cut out of quarries and sliced to create slabs; colors are limited to what is found in nature.</p>
     <!-- course list -->
     <br>
@@ -283,7 +284,7 @@
       <img class="card-img-top rounded-0" src="images/granite/4.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html text-center">
-          <h4 class="card-title">Almond Gold</h4>
+          <h4 class="card-title text-center">Almond Gold</h4>
         </a>
       </div>
     </div>
