--- a/index.html
+++ b/index.html
@@ -382,12 +382,12 @@
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <a href="granite.html">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/granite.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 260px; margin-top: 10px;" src="images/granite.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="granite.html">
                   <h4 class="card-title text-center">Granite</h4>
                 </a>
-                <p class="card-text mb-4 text-center"> Granite has been in use for thousands of years as dimension stone, construction material, decorative, and architectural stone.</p>
+                <!-- <p class="card-text mb-4 text-center"> Granite has been in use for thousands of years as dimension stone, construction material, decorative, and architectural stone.</p> -->
               </div>
             </div>
           </div>
@@ -395,12 +395,12 @@
           <a href="quartzite.html">
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/quartzite.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 260px; margin-top: 10px;" src="images/quartzite.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="quartzite.html">
                   <h4 class="card-title text-center">Quartzite</h4>
                 </a>
-                <p class="card-text mb-4 text-center"> Quartzite is a hard, non-foliated metamorphic rock which was originally <br> pure quartz sandstone.</p>
+                <!-- <p class="card-text mb-4 text-center"> Quartzite is a hard, non-foliated metamorphic rock which was originally <br> pure quartz sandstone.</p> -->
               </div>
             </div>
           </div>
@@ -411,12 +411,12 @@
           <a href="marble.html">
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/marble.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 260px; margin-top: 10px;" src="images/marble.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="marble.html">
                   <h4 class="card-title text-center">Marbles</h4>
                 </a>
-                <p class="card-text mb-4 text-center"> Marble is a metamorphic rock composed of recrystallized carbonate minerals, most commonly calcite or dolomite</p>
+                <!-- <p class="card-text mb-4 text-center"> Marble is a metamorphic rock composed of recrystallized carbonate minerals, most commonly calcite or dolomite</p> -->
               </div>
             </div>
           </div>
@@ -424,12 +424,12 @@
           <a href="quartz.html">
           <div class="col-lg-6 col-sm-6 w3-animate-zoom">
             <div class="card p-0 border-primary rounded-0 hover-shadow">
-              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 250px; margin-top: 10px;" src="images/quartz.jpg" alt="course thumb">
+              <img class="card-img-top rounded-0" style="width: 400px; margin-left: 260px; margin-top: 10px;" src="images/quartz.jpg" alt="course thumb">
               <div class="card-body">
                 <a href="quartz.html">
                   <h4 class="card-title text-center">Quartz</h4>
                 </a>
-                <p class="card-text mb-4 text-center"> Quartz minerals are mixed with resin and laid out to form slabs.</p>
+                <!-- <p class="card-text mb-4 text-center"> Quartz minerals are mixed with resin and laid out to form slabs.</p> -->
               </div>
             </div>
           </div>
