--- a/quartzite.html
+++ b/quartzite.html
@@ -227,8 +227,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Quartzite</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #fff !important;">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #fff !important;">Quartzite</li>
         </ul>
       </div>
     </div>
@@ -239,6 +239,7 @@
 <!-- courses -->
 <section class="section">
   <div class="container">
+    <h2 style="color: #0B0B45 !important;" class="text-center">Quartzite</h2><br>
     <p style="text-align:center;">Quartzite is a nonfoliated metamorphic rock composed almost absolutely of quartz. It paperwork while a quartz-rich sandstone is altered via the warmth, pressure, and chemical interest of metamorphism.</p>
     <br>
     <!-- course list -->
