--- a/select_quote.html
+++ b/select_quote.html
@@ -398,11 +398,11 @@
           <div class="col-md-8">
             <ul class="list-inline custom-breadcrumb mb-2">
               <li class="list-inline-item">
-                <a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;"
+                <a class="h2 text-primary font-secondary" href="index.html" style="color: #fff !important;"
                   >Home</a
                 >
               </li>
-              <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">
+              <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #fff !important;">
                 Select Quote
               </li>
             </ul>
