--- a/about.html
+++ b/about.html
@@ -234,8 +234,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" style="color: #0B0B45 !important;" href="index.html">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">About Us</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" style="color: #fff !important;" href="index.html">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #fff !important;">About Us</li>
         </ul>
       </div>
     </div>
@@ -247,8 +247,15 @@
 <section class="section">
   <div class="container">
     <div class="row">
-      <div class="col-5">
-        <img class="img-fluid w-100 mb-4" src="images/about_1.png" alt="about image">
+      <div class="col-5" style="border-width: 5px;
+      border-style: double;
+      border-color: #fdd64d; padding-top: 50px!important;
+    padding-right: 50px!important;
+    padding-bottom: 50px!important;
+    padding-left: 100px!important; ">
+        <!-- <img class="img-fluid w-100 mb-4" src="images/about_1.png" alt="about image"> -->
+        <img src="images/logo.png" alt="logo" width="250" height="150"><br>
+        <p style="text-align: center;"><strong>Monday – Friday</strong>: 8:00 AM – 5:00 PM<br><strong>Saturday</strong>: 10:00 AM – 4:00 PM<br>After hours available by appointment.</p>
       </div>
       <div class="col-7">
         <!-- <img class="img-fluid w-100 mb-4" src="images/about/about.png" alt="about image"> -->
@@ -413,54 +420,9 @@
     <!-- course list -->
 <div class="row justify-content-center">
   <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
+  <div class="col-lg-12 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/1.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/2.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/3.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/4.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/5.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/6.jpg" alt="course thumb">
-      <!-- <div class="card-body">
-        <a href="product.html">
-          <h4 class="card-title">Absolute Night</h4>
-        </a>
-      </div> -->
-    </div>
-  </div>
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/7.png" alt="course thumb">
-    </div>
-  </div>
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/inspiration/8.jpg" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/inspiration/2.jpg" width="600" height="600" alt="course thumb">
     </div>
   </div>
 </div>
