--- a/gallery.html
+++ b/gallery.html
@@ -135,7 +135,7 @@
               </ul>
             </li>
             <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="200" alt="logo"></a>
-            <li class="nav-item @@gallery">
+            <li class="nav-item active">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item dropdown view">
@@ -230,8 +230,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Gallery</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #fff !important;">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #fff !important;">Gallery</li>
         </ul>
       </div>
     </div>
