--- a/marble.html
+++ b/marble.html
@@ -227,8 +227,8 @@
     <div class="row">
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
-          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #0B0B45 !important;">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #0B0B45 !important;">Marble</li>
+          <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html" style="color: #fff !important;">Home</a></li>
+          <li class="list-inline-item text-white h3 font-secondary nasted" style="color: #fff !important;">Marble</li>
         </ul>
       </div>
     </div>
@@ -239,6 +239,7 @@
 <!-- courses -->
 <section class="section">
   <div class="container">
+    <h2 style="color: #0B0B45 !important;" class="text-center">Marble</h2><br>
     <p style="text-align: center;">You can use marble in the kitchen, as long as you are prepared to commit a little more diligence when it comes to upkeep, or a perspective shift. Each slab is unique and there’s a great deal of variation from one segment to the next, so every marble countertop, backsplash, and tabletop is truly one-of-a-kind. And in the case of the classic white marble, the bright shade gives the kitchen a fresh, clean sparkle and can brighten up a space with less natural light.</p>
     <!-- course list -->
     <br>
